fixed toggle spacing on menu-height

--- a/client/src/scss/global.scss
+++ b/client/src/scss/global.scss
@@ -14,7 +14,7 @@
     $color: white;
     $background-color: #444444;
     justify-content: space-between;
-    height: ($menu-height - 4px);
+    height: ($menu-height - 5px);
     width: ($menu-height / 2);
     border: 1px solid $border-color;
     border-radius: $menu-height / 10;
